// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`provides raw tree data 1`] = `
Object {
  "tree": Object {
    "children": Object {
      "WingLogger": Object {
        "attributes": Object {
          "wing:resource:connections": Array [
            Object {
              "direction": "inbound",
              "implicit": true,
              "relationship": "print",
              "resource": "root/test",
            },
          ],
          "wing:resource:stateful": true,
        },
        "constructInfo": Object {
          "fqn": "constructs.Construct",
          "version": "10.1.245",
        },
        "display": Object {
          "description": "A cloud logging facility",
          "hidden": true,
          "title": "Logger",
        },
        "id": "WingLogger",
        "path": "root/WingLogger",
      },
      "test": Object {
        "attributes": Object {
          "wing:resource:connections": Array [
            Object {
              "direction": "outbound",
              "implicit": true,
              "relationship": "print",
              "resource": "root/WingLogger",
            },
          ],
          "wing:resource:stateful": false,
        },
        "children": Object {
          "Code": Object {
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Code",
            "path": "root/test/Code",
          },
        },
        "constructInfo": Object {
          "fqn": "constructs.Construct",
          "version": "10.1.245",
        },
        "display": Object {
          "description": "A cloud function (FaaS)",
          "title": "Function",
        },
        "id": "test",
        "path": "root/test",
      },
      "test.handler": Object {
        "attributes": Object {
          "wing:resource:connections": Array [],
          "wing:resource:stateful": false,
        },
        "constructInfo": Object {
          "fqn": "constructs.Construct",
          "version": "10.1.245",
        },
        "display": Object {
          "description": "An inflight resource",
          "hidden": true,
          "title": "Inflight",
        },
        "id": "test.handler",
        "path": "root/test.handler",
      },
    },
    "constructInfo": Object {
      "fqn": "constructs.Construct",
      "version": "10.1.245",
    },
    "id": "root",
    "path": "root",
  },
  "version": "tree-0.1",
}
`;

exports[`run all tests single test 1`] = `
Array [
  Object {
    "error": undefined,
    "pass": true,
    "path": "root/test",
    "traces": Array [
      Object {
        "data": Object {
          "message": "wingsdk.cloud.Logger created.",
        },
        "sourcePath": "root/WingLogger",
        "sourceType": "wingsdk.cloud.Logger",
        "timestamp": "<TIMESTAMP>",
        "type": "resource",
      },
      Object {
        "data": Object {
          "message": "wingsdk.cloud.Function created.",
        },
        "sourcePath": "root/test",
        "sourceType": "wingsdk.cloud.Function",
        "timestamp": "<TIMESTAMP>",
        "type": "resource",
      },
      Object {
        "data": Object {
          "message": "hi",
        },
        "sourcePath": "root/test",
        "sourceType": "wingsdk.cloud.Function",
        "timestamp": "<TIMESTAMP>",
        "type": "log",
      },
      Object {
        "data": Object {
          "message": "Invoke (payload=\\"\\"\\"\\").",
          "result": "{\\"result\\":{},\\"success\\":true}",
          "status": "success",
        },
        "sourcePath": "root/test",
        "sourceType": "wingsdk.cloud.Function",
        "timestamp": "<TIMESTAMP>",
        "type": "resource",
      },
      Object {
        "data": Object {
          "message": "wingsdk.cloud.Function deleted.",
        },
        "sourcePath": "root/test",
        "sourceType": "wingsdk.cloud.Function",
        "timestamp": "<TIMESTAMP>",
        "type": "resource",
      },
      Object {
        "data": Object {
          "message": "wingsdk.cloud.Logger deleted.",
        },
        "sourcePath": "root/WingLogger",
        "sourceType": "wingsdk.cloud.Logger",
        "timestamp": "<TIMESTAMP>",
        "type": "resource",
      },
    ],
  },
]
`;

exports[`run single test happy path 1`] = `
Object {
  "error": undefined,
  "pass": true,
  "path": "root/test",
  "traces": Array [
    Object {
      "data": Object {
        "message": "wingsdk.cloud.Logger created.",
      },
      "sourcePath": "root/WingLogger",
      "sourceType": "wingsdk.cloud.Logger",
      "timestamp": "<TIMESTAMP>",
      "type": "resource",
    },
    Object {
      "data": Object {
        "message": "wingsdk.cloud.Function created.",
      },
      "sourcePath": "root/test",
      "sourceType": "wingsdk.cloud.Function",
      "timestamp": "<TIMESTAMP>",
      "type": "resource",
    },
    Object {
      "data": Object {
        "message": "hi",
      },
      "sourcePath": "root/test",
      "sourceType": "wingsdk.cloud.Function",
      "timestamp": "<TIMESTAMP>",
      "type": "log",
    },
    Object {
      "data": Object {
        "message": "Invoke (payload=\\"\\"\\"\\").",
        "result": "{\\"result\\":{},\\"success\\":true}",
        "status": "success",
      },
      "sourcePath": "root/test",
      "sourceType": "wingsdk.cloud.Function",
      "timestamp": "<TIMESTAMP>",
      "type": "resource",
    },
    Object {
      "data": Object {
        "message": "wingsdk.cloud.Function deleted.",
      },
      "sourcePath": "root/test",
      "sourceType": "wingsdk.cloud.Function",
      "timestamp": "<TIMESTAMP>",
      "type": "resource",
    },
    Object {
      "data": Object {
        "message": "wingsdk.cloud.Logger deleted.",
      },
      "sourcePath": "root/WingLogger",
      "sourceType": "wingsdk.cloud.Logger",
      "timestamp": "<TIMESTAMP>",
      "type": "resource",
    },
  ],
}
`;

exports[`run single test test failure 1`] = `
Object {
  "error": undefined,
  "pass": true,
  "path": "root/test",
  "traces": Array [
    Object {
      "data": Object {
        "message": "wingsdk.cloud.Logger created.",
      },
      "sourcePath": "root/WingLogger",
      "sourceType": "wingsdk.cloud.Logger",
      "timestamp": "<TIMESTAMP>",
      "type": "resource",
    },
    Object {
      "data": Object {
        "message": "wingsdk.cloud.Function created.",
      },
      "sourcePath": "root/test",
      "sourceType": "wingsdk.cloud.Function",
      "timestamp": "<TIMESTAMP>",
      "type": "resource",
    },
    Object {
      "data": Object {
        "message": "I am about to fail",
      },
      "sourcePath": "root/test",
      "sourceType": "wingsdk.cloud.Function",
      "timestamp": "<TIMESTAMP>",
      "type": "log",
    },
    Object {
      "data": Object {
        "message": "Invoke (payload=\\"\\"\\"\\").",
        "result": "{\\"result\\":{},\\"success\\":true}",
        "status": "success",
      },
      "sourcePath": "root/test",
      "sourceType": "wingsdk.cloud.Function",
      "timestamp": "<TIMESTAMP>",
      "type": "resource",
    },
    Object {
      "data": Object {
        "message": "wingsdk.cloud.Function deleted.",
      },
      "sourcePath": "root/test",
      "sourceType": "wingsdk.cloud.Function",
      "timestamp": "<TIMESTAMP>",
      "type": "resource",
    },
    Object {
      "data": Object {
        "message": "wingsdk.cloud.Logger deleted.",
      },
      "sourcePath": "root/WingLogger",
      "sourceType": "wingsdk.cloud.Logger",
      "timestamp": "<TIMESTAMP>",
      "type": "resource",
    },
  ],
}
`;
